lib/src/compiler/tests/testdata/errors/97.out
error[E121]: unused pattern `$`
 --> line:4:6
  |
4 |      $  = "bar"
  |      ^ this pattern was not used in the condition
  |